# LocoTOML

./: README.ja.md  README.md  pyproject.toml
examples/cli-app/: main.py  requirements.txt
examples/cli-app/loc/: en.toml  ja.toml
examples/flask-app/: main.py  requirements.txt
examples/flask-app/loc/: UwU.toml  en.toml  ja.toml
examples/tkinter-app/: main.py  requirements.txt
examples/tkinter-app/loc/: en.toml  ja.toml  unknown.toml
