[tool.poetry]
name = "locotoml"
version = "0.2.0"
description = ""
authors = ["drago-suzuki58 <dorasuzu58@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
lococore = "^0.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
